Updated version of Java to 21, replaced Platform Threads with Virtual Threads for less RAM usage and better performance, tweaked String and color processing, made File IO also async, set API version to 1.20, bumped version, fixed duplicate maven-shade-plugin in pom.xml